tests/paczka1/small_fuzzy/93416321.err
Error in line 3: wGjs A40 4,5
Error in line 1: A40 A480 48,1
Error in line 4: wGjs A40 122,0
